angular-client/src/app/app.component.css
/* input color class */
::ng-deep input.mat-input-element {
  color: aliceblue;
}

/* disabled text color for input */
::ng-deep .mat-input-element:disabled, .mat-form-field-type-mat-native-select.mat-form-field-disabled .mat-form-field-infix::after {
  color: aliceblue
}
/* Change label color on no focus */
::ng-deep .mat-form-field .mat-form-field-label {
  color: rgba(255,255,255,.5)
}

/* Change label color on focused */
::ng-deep .mat-form-field.mat-focused .mat-form-field-label {
  color: #673ab7
}
  
/* underline border color on focused */
::ng-deep .mat-focused .mat-form-field-underline .mat-form-field-ripple{
  background-color: #673ab7
}

/* All scrollbars will have this styling */
::ng-deep ::-webkit-scrollbar {
  width: 4px;
  overflow-y: scroll;
  background: grey;
  box-shadow: inset 0 0 4px #707070;
}

/* All scrollbars will have this styling */
::ng-deep ::-webkit-scrollbar-thumb {
  background: #673ab7;
  border-radius: 10px;
}

